--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,17 +12,17 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.EmergeV3">
-        <activity android:name=".ConnectActivity"></activity>
-        <activity android:name=".ActivityApp">
+        android:theme="@style/splashScreenThme">
+        <activity android:name=".ConnectActivity" android:theme="@style/Theme.EmergeV3"></activity>
+        <activity android:name=".ActivityApp" android:theme="@style/Theme.EmergeV3">
         </activity>
-        <activity android:name=".ActivityRegister" />
+        <activity android:name=".ActivityRegister" android:theme="@style/Theme.EmergeV3" />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/map_key" />
 
-        <activity android:name=".ActivityProfile">
+        <activity android:name=".ActivityProfile" android:theme="@style/Theme.EmergeV3">
 
 
             <!-- 3 -->
@@ -30,7 +30,7 @@
         </activity>
         <activity
             android:name=".ActivityHome"
-            android:theme="@style/Theme.Home">
+            android:theme="@style/Theme.EmergeV3">
 
             <!-- 3 -->
 
